# 24_Bot_Last_Z

./: .gitignore  COMMENTING_GUIDE.md  README.md  monitor.py  pyproject.toml  requirements.txt
assets/templates/: README.md
assets/templates/arena/: README.md
assets/templates/bounty/: README.md
assets/templates/construction/: README.md
assets/templates/daily_quests/: README.md
assets/templates/radar_quests/: README.md
config/: farms.yaml
src/lastz_bot/: __init__.py  cli.py  config.py  daily_tracker.py  debug.py  devices.py  farm_console.py  navigation.py  ocr.py  pending.py  runner.py  troop_state.py  vision.py  vision_debug.py
src/lastz_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lastz_bot/tasks/: __init__.py  arena.py  base.py  bounty_missions.py  caravan.py  close_popups.py  construction.py  daily_quests.py  fury_lord.py  gather_cycle.py  heal_troops.py  investigation.py  mail.py  map.py  radar_quests.py  rally_boomer.py  rewards.py  trucks.py  utils.py  vip.py
